--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 				</div>
 			</div>
 		</div>
-		<img class="we-are__logo" src="images/logo.png" alt="logo">
-		<img class="bubles" src="images/bubles.png" alt="bubles">
+		<img class="we-are__logo" src="images/logo.jpeg" alt="logo">
+		<img class="bubles" src="images/bubles.jpeg" alt="bubles">
 	</section>
 
 	<section id="about" class="clickbait">
@@ -63,7 +63,7 @@
 			<div class="row">
 				<div class="col">
 					<div class="clickbait__img">
-						<img src="images/clickbait_img.png" alt="monitor">
+						<img src="images/clickbait_img.jpeg" alt="monitor">
 					</div>
 					<div class="clickbait__headline">
 						<h2>aurora</h2>
@@ -80,8 +80,8 @@
 	</section>
 
 	<section class="how-work">
-		<img class="how-work__drops" width="100%" height="410" src="images/how-work_drops.png" alt="Drops">
-		<img class="how-work__drops--small" width="100%" height="74" src="images/how-work_drops--small.png" alt="Drops">
+		<img class="how-work__drops" width="100%" height="410" src="images/how-work_drops.jpeg" alt="Drops">
+		<img class="how-work__drops--small" width="100%" height="74" src="images/how-work_drops--small.jpeg" alt="Drops">
 		<div class="container">
 			<div class="row">
 				<div class="col">
@@ -95,7 +95,7 @@
 					<div class="how-work__card">
 						<div class="how-work__circle">
 							<div class="how-work__img">
-								<img src="images/how-work_desktop.png" alt="Desktop">
+								<img src="images/how-work_desktop.jpeg" alt="Desktop">
 							</div>
 						</div>
 						<div class="how-work__description">
@@ -107,7 +107,7 @@
 					<div class="how-work__card">
 						<div class="how-work__circle">
 							<div class="how-work__img">
-								<img src="images/how-work_mail.png" alt="Mail">
+								<img src="images/how-work_mail.jpeg" alt="Mail">
 							</div>
 						</div>
 						<div class="how-work__description">
@@ -119,7 +119,7 @@
 					<div class="how-work__card">
 						<div class="how-work__circle">
 							<div class="how-work__img">
-								<img src="images/how-work_handshake.png" alt="Handshake">
+								<img src="images/how-work_handshake.jpeg" alt="Handshake">
 							</div>
 						</div>
 						<div class="how-work__description">
@@ -168,42 +168,42 @@
 			<div class="row projects__container">
 				<div class="col-md-4 col-sm-6 projects__item logo show">
 					<a href="#" class="projects__link">
-						<img class="projects__img" src="images/project_logo_aurora.png" alt="proj" class="projects__img">
+						<img class="projects__img" src="images/project_logo_aurora.jpeg" alt="proj" class="projects__img">
 					</a>
 				</div>
 				<div class="col-md-4 col-sm-6 projects__item landing show">
 					<a href="#" class="projects__link">
-						<img class="projects__img" src="images/project_landing_aurora.png" alt="proj" class="projects__img">
+						<img class="projects__img" src="images/project_landing_aurora.jpeg" alt="proj" class="projects__img">
 					</a>
 				</div>
 				<div class="col-md-4 col-sm-6 projects__item logo show">
 					<a href="#" class="projects__link">
-						<img class="projects__img" src="images/project_logo_aurora.png" alt="proj" class="projects__img">
+						<img class="projects__img" src="images/project_logo_aurora.jpeg" alt="proj" class="projects__img">
 					</a>
 				</div>
 				<div class="col-md-4 col-sm-6 projects__item logo website show">
 					<a href="#" class="projects__link">
-						<img class="projects__img" src="images/project_logo_aurora.png" alt="proj" class="projects__img">
+						<img class="projects__img" src="images/project_logo_aurora.jpeg" alt="proj" class="projects__img">
 					</a>
 				</div>
 				<div class="col-md-4 col-sm-6 projects__item website show">
 					<a href="#" class="projects__link">
-						<img class="projects__img" src="images/project_landing_aurora.png" alt="proj" class="projects__img">
+						<img class="projects__img" src="images/project_landing_aurora.jpeg" alt="proj" class="projects__img">
 					</a>
 				</div>
 				<div class="col-md-4 col-sm-6 projects__item logo show">
 					<a href="#" class="projects__link">
-						<img class="projects__img" src="images/project_logo_aurora.png" alt="proj" class="projects__img">
+						<img class="projects__img" src="images/project_logo_aurora.jpeg" alt="proj" class="projects__img">
 					</a>
 				</div>
 				<div class="col-md-4 col-sm-6 projects__item blog show">
 					<a href="#" class="projects__link">
-						<img class="projects__img" src="images/project_landing_aurora.png" alt="proj" class="projects__img">
+						<img class="projects__img" src="images/project_landing_aurora.jpeg" alt="proj" class="projects__img">
 					</a>
 				</div>
 				<div class="col-md-4 col-sm-6 projects__item logo website show">
 					<a href="#" class="projects__link">
-						<img class="projects__img" src="images/project_logo_aurora.png" alt="proj" class="projects__img">
+						<img class="projects__img" src="images/project_logo_aurora.jpeg" alt="proj" class="projects__img">
 					</a>
 				</div>
 			</div>
@@ -212,7 +212,7 @@
 
 	<section class="our-team">
 		<div class="container">
-			<img class="our-team__img" src="images/our-team_bg.png" alt="Tree">
+			<img class="our-team__img" src="images/our-team_bg.jpeg" alt="Tree">
 			<div class="row">
 				<div class="col">
 					<div class="our-team__headline">
@@ -294,7 +294,7 @@
 	</section>
 
 	<footer id="contacts" class="footer">
-		<img src="images/footer_bg.png" alt="bg">
+		<img src="images/footer_bg.jpeg" alt="bg">
 		<div class="container">
 			<div class="row">
 				<div class="col">
