--- a/index.html
+++ b/index.html
@@ -66,13 +66,18 @@
 						<img src="images/clickbait_img.jpeg" alt="monitor">
 					</div>
 					<div class="clickbait__headline">
-						<h2>aurora</h2>
+						<h2>Web-studio "Aurora"</h2>
 					</div>
 					<div class="clickbait__description">
-						<p>We are a community of programmers, we create sites, templates and many other types of tasks upon request</p>
+						<p>We provide a wide range of services:</p>
+						<p>Creation of websites</p>
+						<p>Web-design</p>
+						<p>Creating logos</p>
+						<p>Creating  animation videos</p>
+						<p>SEO</p>
 					</div>
 					<div class="clickbait__btn order-btn">
-						<button class="clickbait__button">order a site</button>
+						<button class="clickbait__button" data-toggle="modal" data-target=".sss">order a site</button>
 					</div>
 				</div>
 			</div>
@@ -85,8 +90,8 @@
 		<div class="container">
 			<div class="row">
 				<div class="col">
-					<div class="how-work__headline">
-						<h2>How do we work?</h2>
+					<div class="how-work__headline headline">
+						<h2>how do we work?</h2>
 					</div>
 				</div>
 			</div>
@@ -99,7 +104,16 @@
 							</div>
 						</div>
 						<div class="how-work__description">
-							<p>Each of us understands the obvious thing: understanding the essence of resource-saving technologies contributes to the preparation and implementation of the withdrawal of current assets.v</p>
+							<h5 class="how-work__head">Our qualification</h5>
+							<p>You can send us your data, only using the button "Order a website", or send us your questions using these contacts:</p>
+							<ul>
+								<li>Viber</li>
+								<li><a href="tel:+380953397784" target="_blank">+380953397784</a></li>
+								<li>Email</li>
+								<li><a href="mailto:auroradevelopment9@gmail.com" target="_blank">auroradevelopment9@gmail.com</a></li>
+								<li>Instragram</li>
+								<li><a href="https://www.instagram.com/aurora.development.en/" target="_blank">@aurora.development</a></li>
+							</ul>
 						</div>
 					</div>
 				</div>
@@ -111,7 +125,8 @@
 							</div>
 						</div>
 						<div class="how-work__description">
-							<p>Each of us understands the obvious he obvious thinhe obvious thinhe obvious thinhe obvious thinthing: understanding the essence of resource-saving technologies contributes to the preparation and implementation of the withdrawal of current assets.v</p>
+							<h5 class="how-work__head">Our approach</h5>
+							<p>Our approach for everyone client is individual.At first we determine what you exactly you need, and then we are discussing the price, so because of this, on our website you won't find the price.</p>
 						</div>
 					</div>
 				</div>
@@ -123,9 +138,9 @@
 							</div>
 						</div>
 						<div class="how-work__description">
-							<p>Each of us understands the obvious ologies contributes to the preparation and implementation of the withdrawal of current assets.v</p>
+							<h5 class="how-work__head">Contacting with our manager</h5>
+							<p>Aurora is a young web-studio, which created dozens of sites, animated videos, logos and templates for a short time. The Aurora team consists of young and experienced programmers which are doing their job well. If you have any questions, please contact our managers ,which are happy to answer and help you.</p>
 						</div>
-						<!-- thing: understanding the essence of resource-saving techn -->
 					</div>
 				</div>
 			</div>
@@ -133,6 +148,7 @@
 	</section>
 
 	<section class="video">
+		<img class="video__img-top" src="images/video_bg-top.png" alt="Black Background">
 		<div class="container">
 			<div class="row">
 				<div class="col">
@@ -142,14 +158,22 @@
 				</div>
 			</div>
 		</div>
+		<img class="video__img-bottom" src="images/video_bg-bottom.png" alt="Black Background">
 	</section>
 
 	<section id="portfolio" class="projects">
 		<div class="container">
 			<div class="row">
+				<div class="col">
+					<div class="projects__headline headline">
+						<h2>our portfolio</h2>
+					</div>
+				</div>
+			</div>
+			<div class="row">
 				<ul class="projects__type__list">
 					<li class="projects__type">
-						<button id="btn-all" class="projects__btn">all</button>
+						<button id="btn-all" class="projects__btn projects__btn--active">all</button>
 					</li>
 					<li class="projects__type">
 						<button id="btn-logo" class="projects__btn">logo</button>
@@ -166,42 +190,42 @@
 				</ul>
 			</div>
 			<div class="row projects__container">
-				<div class="col-md-4 col-sm-6 projects__item logo show">
+				<div class="col-md-4 col-6 projects__item logo show">
 					<a href="#" class="projects__link">
 						<img class="projects__img" src="images/project_logo_aurora.jpeg" alt="proj" class="projects__img">
 					</a>
 				</div>
-				<div class="col-md-4 col-sm-6 projects__item landing show">
+				<div class="col-md-4 col-6 projects__item landing show">
 					<a href="#" class="projects__link">
 						<img class="projects__img" src="images/project_landing_aurora.jpeg" alt="proj" class="projects__img">
 					</a>
 				</div>
-				<div class="col-md-4 col-sm-6 projects__item logo show">
+				<div class="col-md-4 col-6 projects__item logo show">
 					<a href="#" class="projects__link">
 						<img class="projects__img" src="images/project_logo_aurora.jpeg" alt="proj" class="projects__img">
 					</a>
 				</div>
-				<div class="col-md-4 col-sm-6 projects__item logo website show">
+				<div class="col-md-4 col-6 projects__item logo website show">
 					<a href="#" class="projects__link">
 						<img class="projects__img" src="images/project_logo_aurora.jpeg" alt="proj" class="projects__img">
 					</a>
 				</div>
-				<div class="col-md-4 col-sm-6 projects__item website show">
+				<div class="col-md-4 col-6 projects__item website show">
 					<a href="#" class="projects__link">
 						<img class="projects__img" src="images/project_landing_aurora.jpeg" alt="proj" class="projects__img">
 					</a>
 				</div>
-				<div class="col-md-4 col-sm-6 projects__item logo show">
+				<div class="col-md-4 col-6 projects__item logo show">
 					<a href="#" class="projects__link">
 						<img class="projects__img" src="images/project_logo_aurora.jpeg" alt="proj" class="projects__img">
 					</a>
 				</div>
-				<div class="col-md-4 col-sm-6 projects__item blog show">
+				<div class="col-md-4 col-6 projects__item blog show">
 					<a href="#" class="projects__link">
 						<img class="projects__img" src="images/project_landing_aurora.jpeg" alt="proj" class="projects__img">
 					</a>
 				</div>
-				<div class="col-md-4 col-sm-6 projects__item logo website show">
+				<div class="col-md-4 col-6 projects__item logo website show">
 					<a href="#" class="projects__link">
 						<img class="projects__img" src="images/project_logo_aurora.jpeg" alt="proj" class="projects__img">
 					</a>
@@ -215,7 +239,7 @@
 			<img class="our-team__img" src="images/our-team_bg.jpeg" alt="Tree">
 			<div class="row">
 				<div class="col">
-					<div class="our-team__headline">
+					<div class="our-team__headline headline">
 						<h2>about our team</h2>
 					</div>
 				</div>
@@ -223,7 +247,7 @@
 			<div class="row our-team__content">
 				<div class="our-team__col col-lg-3 col-md-4 offset-lg-1_5">
 					<div class="our-team__container">
-						<div class="our-team__item">
+						<div class="our-team__item our-team__nazariy">
 							<div class="our-team__info">
 								<span class="our-team__pass">nazariy baranovskiy</span>
 							</div>
@@ -231,9 +255,9 @@
 								<span>Front-end</span>
 							</div>
 						</div>
-						<div class="our-team__item">
+						<div class="our-team__item our-team__yefym">
 							<div class="our-team__info">
-								<span class="our-team__pass">Efym Chirochkin</span>
+								<span class="our-team__pass">Yefym Chirochkin</span>
 							</div>
 							<div class="our-team__position">
 								<span>SEO specialist</span>
@@ -243,7 +267,7 @@
 				</div>
 				<div class="our-team__col col-lg-3 col-md-4">
 					<div class="our-team__container">
-						<div class="our-team__item">
+						<div class="our-team__item our-team__maxym">
 							<div class="our-team__info">
 								<span class="our-team__pass">Maxym Sitnikov</span>
 							</div>
@@ -251,7 +275,7 @@
 								<span>back-end</span>
 							</div>
 						</div>
-						<div class="our-team__item">
+						<div class="our-team__item our-team__dmytro">
 							<div class="our-team__info">
 								<span class="our-team__pass">Dmytro Malon</span>
 							</div>
@@ -259,7 +283,7 @@
 								<span>back-end</span>
 							</div>
 						</div>
-						<div class="our-team__item">
+						<div class="our-team__item our-team__taras">
 							<div class="our-team__info">
 								<span class="our-team__pass">Taras Yavorivskiy</span>
 							</div>
@@ -271,7 +295,7 @@
 				</div>
 				<div class="our-team__col col-lg-3 col-md-4">
 					<div class="our-team__container">
-						<div class="our-team__item">
+						<div class="our-team__item our-team__oleksandr">
 							<div class="our-team__info">
 								<span class="our-team__pass">Oleksandr Sachko</span>
 							</div>
@@ -279,9 +303,9 @@
 								<span>web designer</span>
 							</div>
 						</div>
-						<div class="our-team__item">
+						<div class="our-team__item our-team__bohdan">
 							<div class="our-team__info">
-								<span class="our-team__pass">Bogdan Fesuk</span>
+								<span class="our-team__pass">Bohdan Fesyuk</span>
 							</div>
 							<div class="our-team__position">
 								<span>Motion designer</span>
@@ -305,7 +329,7 @@
 			<div class="row">
 				<div class="col">
 					<div class="order-btn">
-						<button class="footer__btn">order a site</button>
+						<button class="footer__btn" data-toggle="modal" data-target=".sss">order a site</button>
 					</div>
 				</div>
 			</div>
@@ -316,10 +340,10 @@
 							<a href="https://www.instagram.com/aurora.development/" target="_blank" class="footer__link link--instagram"><i class="fab fa-instagram"></i></a>
 						</li>
 						<li class="footer__item">
-							<a href="#" target="_blank" class="footer__link link--viber"><i class="fab fa-viber"></i></a>
+							<a href="viber://chat?number=+380633413689" target="_blank" class="footer__link link--viber"><i class="fab fa-viber"></i></a>
 						</li>
 						<li class="footer__item">
-							<a href="#" target="_blank" class="footer__link link--google"><i class="fab fa-google"></i></a>
+							<a href="mailto:auroradevelopment9@gmail.com" target="_blank" class="footer__link link--google"><i class="fab fa-google"></i></a>
 						</li>
 					</ul>
 				</div>
@@ -331,10 +355,20 @@
 		<i class="fas fa-angle-up"></i>
 	</a>
 
+	
+
+	
 
 
 
 
+	<div class="modal fade sss" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+	  <div class="modal-dialog modal-lg">
+	    <div class="modal-content">
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem deleniti, tempora saepe tenetur exercitationem accusantium? Illum iste voluptates, beatae, accusantium molestias aut cupiditate aperiam placeat, porro quo magni quasi alias officiis. Dolores adipisci quisquam, dolorum veniam repudiandae aliquam sapiente? Atque possimus nulla corrupti, nisi molestias repellendus excepturi ea qui quas. Quo hic dolorum, repellendus pariatur, fugiat, modi reprehenderit laborum itaque optio repudiandae, beatae dolor mollitia voluptate. Accusamus suscipit repellat qui. Aliquid quibusdam recusandae excepturi libero ullam, molestiae doloremque, culpa optio ut, accusamus provident numquam. Beatae aperiam sint, adipisci repellat dignissimos, tempora eos minus. Sint eveniet, ipsam. Nemo temporibus, distinctio in dolorem amet iste illo, sit! Mollitia atque, optio, rerum dolorum rem deleniti corrupti, pariatur amet vitae labore alias voluptatum. Ex velit suscipit soluta, quia qui unde accusantium aperiam veniam? Deserunt, dolore, saepe. Blanditiis ea quae, quo quas a impedit voluptas et culpa praesentium mollitia vitae aut molestias. Facilis quo voluptatem similique officiis tempora temporibus exercitationem eveniet ipsam id impedit cumque soluta quibusdam, ullam laboriosam, inventore aliquid fugit blanditiis enim tenetur alias. Nesciunt amet, beatae, modi incidunt totam explicabo placeat ut qui est rerum enim, molestiae facilis commodi nemo rem. Quibusdam, reiciendis officia nemo vitae est. Asperiores dignissimos veritatis quos! Officia molestias harum animi ducimus, adipisci, architecto at voluptatem consequuntur perferendis possimus, quasi sunt voluptatibus iure. Velit aliquam a error ipsam nihil, officia corrupti suscipit, voluptate culpa! Facere molestias amet sunt ut dicta fuga accusamus quidem sapiente laudantium cum, ab quis quibusdam nemo esse illo maxime, porro, unde sed eaque quasi neque et culpa veniam! Tenetur, voluptas fuga atque a possimus! Doloribus recusandae corporis deleniti assumenda explicabo voluptatum esse rerum dolor sunt praesentium animi, debitis perspiciatis vero quo error et, possimus, inventore. Facere obcaecati at, esse vero ut, quos similique voluptatibus, natus pariatur illo, eligendi earum! Rerum excepturi dolore sapiente, at culpa deleniti voluptas omnis a quaerat vero facere necessitatibus aliquid saepe cupiditate eveniet, officiis! Eius asperiores, optio molestias nesciunt ex voluptate eaque quibusdam perferendis molestiae, possimus deserunt sit dolor corrupti! Amet doloribus delectus illo reprehenderit veritatis voluptas ipsum minus repellendus vitae, quod repudiandae modi sit dolore, autem cum, et aut explicabo libero asperiores, facilis provident animi voluptates. Ab vitae, voluptatum consequuntur rem excepturi animi ex culpa eius perspiciatis, ipsam officiis nesciunt modi, ullam quibusdam commodi! Adipisci recusandae placeat quod velit? Nobis adipisci dicta, eveniet nisi voluptates nulla omnis placeat quia in perferendis officiis assumenda laboriosam modi impedit eum! Necessitatibus enim voluptates pariatur non veniam dolores voluptas beatae fugiat iure iusto incidunt sint in error tempora libero consectetur minus, perferendis alias? Pariatur, a doloribus quia nesciunt tempore sapiente, quaerat consequuntur libero beatae error accusantium voluptatum ipsum non quasi ipsam quo, aliquam ut aliquid! Nemo, veniam. Tenetur assumenda, quia voluptas ullam, modi libero quibusdam tempora illum, excepturi dignissimos veritatis ut voluptates asperiores qui expedita consectetur autem! Ab tempore, animi, quo eveniet iste fuga velit quasi vitae est. Beatae dignissimos qui, assumenda animi accusantium ea consequuntur necessitatibus, libero suscipit culpa fugiat, ut eveniet blanditiis! Itaque numquam rem veniam molestias nobis molestiae corrupti sapiente sed cumque, corporis at obcaecati incidunt ex totam id? Ad minus quis asperiores illo quas, commodi laudantium debitis eaque, recusandae nisi deserunt pariatur, nobis! Recusandae voluptatibus culpa minima eos suscipit neque quae, ipsam fuga tenetur vel porro dicta ea, amet soluta odit quo delectus fugit beatae vitae nostrum dolore pariatur, magni! Commodi debitis, reiciendis quas, quae soluta atque veniam voluptates numquam dolorem maiores et id odit cum eveniet expedita nisi accusantium quo earum velit in! Sequi odit fugit voluptas sint harum incidunt totam laboriosam omnis nobis alias ipsum possimus, deleniti qui tempore quasi nam, veniam vel dicta quia esse. Quaerat expedita sit nihil illum nisi quasi maiores veritatis tempora laboriosam at, earum officia quo sed dolor, voluptas dolorem laudantium, facere praesentium. Debitis accusantium, animi vel illo mollitia provident tempore, aperiam sed dolore natus veritatis. Quos ratione est laboriosam nemo vero officia, voluptatum nobis inventore explicabo. Nam dolore dignissimos asperiores itaque similique nihil inventore ad repellat excepturi, explicabo mollitia repudiandae adipisci eum tempora labore libero quam consequuntur, aut pariatur enim. Sed repudiandae tempore iusto, perspiciatis rerum consequuntur numquam sequi. Ex nisi laboriosam, amet magnam sapiente, qui eaque consequuntur veritatis ad maxime ducimus totam, illum in possimus. Vero sed sint error vitae distinctio, quasi perferendis soluta consectetur architecto voluptates facilis, earum animi. Possimus repellendus perferendis iusto hic molestiae ipsa harum, aut veniam numquam natus labore consequuntur et eum, laborum totam! Necessitatibus, ratione. Hic nostrum repellat odit facere nihil incidunt quam eaque ex, asperiores eum porro voluptas illum unde in dolores, dolorem quae? Eligendi recusandae porro cumque qui odit nesciunt et. Amet, porro unde officia, dicta adipisci repudiandae vel exercitationem doloremque cupiditate quis recusandae provident officiis perferendis, ipsam possimus sapiente ex alias sint repellat soluta explicabo! Fuga quisquam ut commodi facilis animi possimus, cupiditate amet error eum atque numquam nesciunt provident nam tenetur voluptatum porro necessitatibus facere officia sequi. Natus voluptate exercitationem iusto doloribus minus veritatis sit aliquid nihil obcaecati debitis aliquam sint, magnam provident nemo mollitia temporibus est. Vel ipsa fugit error officia ea a est eius at, aspernatur ex dolorem voluptatibus. Rerum distinctio, accusantium, veritatis beatae animi id atque dolores fugit possimus quidem adipisci amet tenetur, dolorum quam corrupti modi eveniet voluptate ducimus maiores. Hic blanditiis quis explicabo facilis perspiciatis assumenda inventore aspernatur a! Animi maiores rem quibusdam, adipisci placeat ipsum libero nesciunt quas dolores incidunt sunt id aliquam molestias cum eum iusto et deserunt maxime perspiciatis possimus natus, officia odit, esse laborum deleniti! Dolorem ullam reprehenderit porro maxime praesentium facere minima, in nemo ratione velit unde modi nostrum repellendus aspernatur. Saepe reprehenderit natus atque inventore praesentium accusamus voluptate facere numquam commodi assumenda ipsum accusantium recusandae id unde nam quam ullam, voluptates itaque fugit hic. Ex cumque, neque, quasi animi iure nostrum ipsam, itaque error voluptatibus maxime ratione tempora vitae at quaerat voluptas. Nemo sapiente labore quidem odio, non praesentium hic consequuntur nobis sit perspiciatis error, rerum? Vitae, suscipit enim. In libero laudantium illo quos, omnis beatae nobis, non dolor eius voluptates fugit itaque iusto saepe tempora, tenetur amet quis veritatis.
+	    </div>
+	  </div>
+	</div>
 
 
 
