--- a/index.html
+++ b/index.html
@@ -190,14 +190,14 @@
 				</ul>
 			</div>
 			<div class="row projects__container">
-				<div class="col-md-4 col-6 projects__item logo show">
+				<div class="col-md-4 col-6 projects__item landing show">
 					<a href="portfolio/project_smart_city/index.html" class="projects__link">
-						<img class="projects__img" src="images/project_logo_aurora.jpeg" alt="proj" class="projects__img">
+						<img class="projects__img" src="images/portfolio/smart_city.jpg" alt="proj" class="projects__img">
 					</a>
 				</div>
-				<div class="col-md-4 col-6 projects__item landing show">
+				<div class="col-md-4 col-6 projects__item website show">
 					<a href="portfolio/project_shopy/index.html" class="projects__link">
-						<img class="projects__img" src="images/project_landing_aurora.jpeg" alt="proj" class="projects__img">
+						<img class="projects__img" src="images/portfolio/shopy.jpg" alt="proj" class="projects__img">
 					</a>
 				</div>
 				<div class="col-md-4 col-6 projects__item logo show">
@@ -205,29 +205,14 @@
 						<img class="projects__img" src="images/project_logo_aurora.jpeg" alt="proj" class="projects__img">
 					</a>
 				</div>
-				<div class="col-md-4 col-6 projects__item logo website show">
-					<a href="#" class="projects__link">
-						<img class="projects__img" src="images/project_logo_aurora.jpeg" alt="proj" class="projects__img">
-					</a>
-				</div>
-				<div class="col-md-4 col-6 projects__item website show">
-					<a href="#" class="projects__link">
-						<img class="projects__img" src="images/project_landing_aurora.jpeg" alt="proj" class="projects__img">
-					</a>
-				</div>
 				<div class="col-md-4 col-6 projects__item logo show">
 					<a href="#" class="projects__link">
 						<img class="projects__img" src="images/project_logo_aurora.jpeg" alt="proj" class="projects__img">
 					</a>
 				</div>
-				<div class="col-md-4 col-6 projects__item blog show">
+				<div class="col-md-4 col-6 projects__item landing show">
 					<a href="#" class="projects__link">
 						<img class="projects__img" src="images/project_landing_aurora.jpeg" alt="proj" class="projects__img">
-					</a>
-				</div>
-				<div class="col-md-4 col-6 projects__item logo website show">
-					<a href="#" class="projects__link">
-						<img class="projects__img" src="images/project_logo_aurora.jpeg" alt="proj" class="projects__img">
 					</a>
 				</div>
 			</div>
